<resources>
    <string name="app_name">BeaconRetail</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_pay">Pay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="rupees">\u20B9</string>

    <string name="image_url">http://lorempixel.com/400/200/sports/</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--MESSAGES FOR NOTIFICATIONS-->
    <string name="beacon_uuid">b9407f30-f5f8-466e-aff9-25556b57fe6d</string>
    <string name="welcome_msg">Welcome to Beacon Retail Store!</string>
    <string name="exit_msg">Thanks for visiting Beacon Retail Store!</string>
    <string name="exit_msg_with_cart">You have items in cart.Would you like to purchase?</string>
    <string name="men_section_msg">We have exciting offers for you in Men section</string>
    <string name="women_section_msg">We have exciting offers for you in Women section</string>
    <string name="decision">Do you want to remove it from your cart ?</string>

    <!--NOTIFICATION MESSAGE SECTION ARGS VALUES-->
    <string name="check_out">checkout</string>
    <string name="general_offer">general</string>
    <string name="men_section_offer">men</string>
    <string name="women_section_offer">women</string>

    <!--beacon id-->
    <string name="main_entrance_beacon">mainEntranceBeacon</string>
    <string name="entry_beacon">entryBeacon</string>
    <string name="men_section_beacon">menSectionBeacon</string>
    <string name="women_section_beacon">womenSectionBeacon</string>
    <string name="title_activity_login">LoginActivity</string>


    <!--TOOLBAR MENU-->
    <string name="action_cart">cart</string>
    <string name="action_search">search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_search">Search</string>
    <string name="sections_url">http://192.168.139.26:8080/beaconretail/products</string>
    <string name="products_url">http://192.168.139.26:8080/beaconretail/products</string>
    <string name="offer_url">http://192.168.139.26:8080/beaconretail/offers</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>

    <string name="size_title">Size </string>
    <string name="color_title">Colors </string>
    <string name="description_title">Description </string>
    <string name="description_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet</string>
    <string name="recommendation_text">Recommendation</string>
    <string name="title_activity_cart">CartActivity</string>
</resources>
